[project]
name = "painteraudiolength"
description = "A tool for calculating audio duration that takes audio input and outputs the audio length as a floating-point number. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/princepainter/Comfyui-PainterAudioLength"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/princepainter/Comfyui-PainterAudioLength/wiki"
"Bug Tracker" = "https://github.com/princepainter/Comfyui-PainterAudioLength/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui-PainterAudioLength"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

